<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navItemHome"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/navItemProfile"
            android:icon="@drawable/ic_nav_profile"
            android:title="@string/action_profile" />

        <item
            android:id="@+id/navItemScan"
            android:icon="@drawable/ic_nav_inbox"
            android:title="@string/action_scan" />
        <item
            android:id="@+id/navItemPlaylist"
            android:icon="@drawable/ic_nav_inbox"
            android:title="@string/action_playlist" />
        <item
            android:id="@+id/navItemSongs"
            android:icon="@drawable/ic_nav_inbox"
            android:title="@string/action_song" />
        <item
            android:id="@+id/navItemShop"
            android:icon="@drawable/ic_nav_inbox"
            android:title="@string/action_shop" />
        <item
            android:id="@+id/navItemAchiev"
            android:icon="@drawable/ic_nav_inbox"
            android:title="@string/action_achiev" />
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_action_bluetooth"
            android:title="Sync" />
        <item
            android:id="@+id/navItemSetting"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/navItemLogout"
            android:icon="@drawable/ic_nav_logout"
            android:title="@string/action_logout" />
    </group>
    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_nav_logout"
                android:title="@string/action_logout" />
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />

        </menu>
    </item>
</menu>